--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"studio": "prisma studio --browser none"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-better-sqlite3": "^7.0.0",
 		"@prisma/client": "^7.0.0",
 		"class-variance-authority": "^0.7.1",
@@ -23,6 +24,7 @@
 		"next-themes": "^0.4.6",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.66.1",
 		"react-toastify": "^11.0.5",
 		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
