--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"studio": "prisma studio --browser none"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^10.1.0",
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-better-sqlite3": "^7.0.0",
 		"@prisma/client": "^7.0.0",
