--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 	"dependencies": {
 		"@faker-js/faker": "^10.1.0",
 		"@hookform/resolvers": "^5.2.2",
-		"@prisma/adapter-better-sqlite3": "^7.0.0",
-		"@prisma/client": "^7.0.0",
+		"@prisma/adapter-libsql": "^7.0.1",
+		"@prisma/client": "^7.0.1",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
@@ -25,7 +25,7 @@
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.3",
 		"lucide-react": "^0.554.0",
-		"next": "^16.0.3",
+		"next": "^16.0.4",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
@@ -37,17 +37,16 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.17",
-		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.39.1",
-		"eslint-config-next": "^16.0.3",
+		"eslint-config-next": "^16.0.4",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.7.1",
-		"prisma": "^7.0.0",
+		"prisma": "^7.0.1",
 		"tailwindcss": "^4.1.17",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
@@ -55,15 +54,13 @@
 	"trustedDependencies": [
 		"@prisma/engines",
 		"@tailwindcss/oxide",
-		"better-sqlite3",
 		"prisma",
 		"sharp",
 		"unrs-resolver"
 	],
 	"engines": {
-		"node": "22.x",
-		"npm": "11.x",
-		"bun": "1.3.3"
+		"node": ">=22.x.x",
+		"npm": ">=11.x.x"
 	},
 	"author": "Saikat Sardar",
 	"license": "MIT",
